# keysurgeon

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  LICENSE  PRODUCT.md  README.md  SECURITY.md  SUPPORT.md  app_textual.py  boards.py  brand.py  doctor.py  export_report.py  faults.py  fixes.py  hook.py  issue_packet.py  keysurgeon.cmd  keysurgeon.py  ks_profile.py  manual_smoke.py  profile.py  proof_report.py  pyproject.toml  rich_ui.py  selftest.py  storage.py  trials.py  ui.py  watch.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: board_report.yml  bug_report.yml  config.yml  feature_request.yml  manual_smoke_report.yml
.github/workflows/: pages.yml  selftest.yml  windows-exe.yml
docs/: DIAGNOSIS_GUIDE.md  FIRST_ISSUES.md  GITHUB_LABELS.md  GITHUB_METADATA.md  KEYBOARD_TESTER_COMPARISON.md  LAUNCH_PACKET.md  MANUAL_KEYBOARD_SMOKE.md  MANUAL_SMOKE_REPORT.md  MANUAL_SMOKE_RESULT.md  PROOF_MATRIX.md  PUBLISH_RUNBOOK.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_0.2.0.md  RELEASE_NOTES_0.2.1.md  ROADMAP.md  STARTER_ISSUE_TEMPLATES.md
scripts/: build-exe.ps1  clean-artifacts.ps1  demo_svg_format.py  export-landing-screenshots.ps1  export-social-preview.ps1  export-terminal-screenshots.ps1  generate-demo-assets.ps1  github-setup-plan.ps1  launch-readiness.ps1  local-release-proof.ps1  manual-keyboard-smoke.ps1  package-release-asset.ps1  post-publish-audit.ps1  pre-publish-audit.ps1  record-manual-smoke-result.ps1  release-check.ps1  release-commit-plan.ps1  release-packet.ps1  render-app-svg.py  render-demo-svg.py  render-flow-svg.py  render-proof-manifest.py  seed-starter-issues-plan.ps1  test-manual-smoke-gate.ps1  verify-dist-parity.ps1  verify-landing-metadata.py  verify-proof-manifest.py  verify-public-scrub.py  verify-public-tree.ps1  verify-site-render.ps1  verify-textual-app.py  verify-workflow-policy.py
site/: index.html
site/assets/: keysurgeon-proof.json  keysurgeon.css
